# controllers/users.js
@@ -27,4 +27,19 @@ const getSingle = async (req, res, next) => {
   });
 };
 
-module.exports = { getAll, getSingle }
+const deleteSingle = async (req, res) => {
+  if (!ObjectId.isValid(req.params.id)) {
+    res.status(400).json('Must use a valid id to delete a user.');
+  }
+  const userId = new ObjectId(req.params.id);
+  const response = await mongodb.getDb().db().collection('users').deleteOne({ _id: userId }, true);
+  console.log(response);
+  if (response.deletedCount > 0) {
+    res.status(204).send();
+  }
+  else {
+    res.status(500).json(response.error || 'An error occurred while deleting the user.');
+  }
+};
+
+module.exports = { getAll, getSingle, deleteSingle }
